# hcp-dp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  external-validation.yml  nightly-perf.yml  release-alpha.yml
benches/: large_align.rs  perf_lcs.rs  perf_nw.rs  perf_viterbi.rs  summary_ops.rs
bindings/python/: README.md  hcp_align.py
docs/: alpha-release-checklist.md  capabilities.md  cli.md  design.md  output-schema.md  problem-author-guide.md  sample-report.md  technology-roadmap.md
examples/: align.rs  custom_problem.rs  lcs.rs  matrix_chain.rs  smith_waterman.rs  viterbi.rs
examples/data/: README.md  reads.fa  reads.fq  references.fa  references.fq
perf/: baseline.json
schemas/: hcp-align.v1.schema.json
scripts/: check.sh  check_bench.py  perf_report.py  validate_external.py
src/: alignment.rs  blocks.rs  builder.rs  contract.rs  engine.rs  lib.rs  scoring.rs  seeding.rs  sequence_io.rs  traits.rs  utils.rs
src/problems/: dag.rs  dag_sp.rs  dtw.rs  edit_distance.rs  lcs.rs  lcs_banded.rs  matrix_chain.rs  mod.rs  nw_affine.rs  nw_align.rs  semiglobal.rs  smith_waterman.rs  viterbi.rs
tests/: cli_hcp_align.rs  contract_lcs_nw.rs  dag_sp_random.rs  engine_invariants.rs  engine_lcs_integration.rs  engine_nw_integration.rs  engine_viterbi_integration.rs  heavy_stress.rs  lcs_banded_property.proptest-regressions  lcs_banded_property.rs  matrix_chain_integration.rs  nw_affine_property.rs  parallel_equivalence.rs  ref_full_dp.proptest-regressions  ref_full_dp.rs  summary_laws.rs  viterbi_degenerate.rs
