[package]
name = "hcp-dp"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Logan Nye"]
description = "Alpha-stage height-compressed dynamic programming engine with correctness-tested LCS and Needleman-Wunsch examples."
repository = "https://github.com/logannye/hcp-dp"
readme = "README.md"
keywords = ["dynamic-programming", "algorithms", "bioinformatics", "compression"]
categories = ["algorithms", "science", "data-structures"]

[lib]
name = "hcp_dp"
path = "src/lib.rs"

[dependencies]
rayon = { version = "1.10", optional = true }
tracing = { version = "0.1", optional = true }
sysinfo = "0.30"
[dev-dependencies]
criterion = "0.5"
rand = "0.8"
proptest = "1"

[[bench]]
name = "large_align"
harness = false

[features]
parallel = ["rayon"]
tracing = ["dep:tracing"]
