[package]
name = "hcp-dp"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Logan Nye"]
description = "Exact sequence-alignment traceback from height-compressed dynamic-programming summaries."
repository = "https://github.com/logannye/hcp-dp"
homepage = "https://github.com/logannye/hcp-dp#readme"
readme = "README.md"
keywords = ["dynamic-programming", "alignment", "bioinformatics", "algorithms"]
categories = ["algorithms", "science", "data-structures"]

[lib]
name = "hcp_dp"
path = "src/lib.rs"

[[bin]]
name = "hcp-align"
path = "src/bin/hcp_align.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing = { version = "0.1", optional = true }
sysinfo = "0.30"
[dev-dependencies]
criterion = "0.5"
rand = "0.8"
proptest = "1"

[[bench]]
name = "large_align"
harness = false

[features]
parallel = ["rayon"]
tracing = ["dep:tracing"]
